2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.addin.xml: Bump MD version.

2007-09-21  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport.CodeBehind/CodeBehindProjectFileExtension.cs:
	  In BuildChildNodes, don't assume that HasChildNodes is false, because
	  other extensions may have added children to this node.

2007-09-20  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/generated.cs,
	  gtk-gui/MonoDevelop.DesignerSupport.Toolbox.ComponentSelectorDialog.cs,
	  gtk-gui/gui.stetic: Regenerated GUI files.
	* MonoDevelop.DesignerSupport.Toolbox/Toolbox.cs: Added NodeView subclass
	  and overrided OnDragDataDelete. This is necessary to avoid a GTK warning
	  about the need to override drag_data_delete.

2007-09-20  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport.mdp,
	  MonoDevelop.DesignerSupport/BindingService.cs,
	  MonoDevelop.DesignerSupport/OpenDocumentFileProvider.cs, Makefile.am:
	  Make OpenDocumentFileProvider publicly accessible so it can be used
	  elsewhere.

2007-09-19  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport.mdp,
	  MonoDevelop.DesignerSupport/CodeBehindService.cs,
	  MonoDevelop.DesignerSupport.CodeBehind/CodeBehindMissingClassBuilder.cs,
	  MonoDevelop.DesignerSupport.CodeBehind/CodeBehindProjectFileExtension.cs,
	  MonoDevelop.DesignerSupport.CodeBehind/CodeBehindClassEventArgs.cs,
	  MonoDevelop.DesignerSupport.CodeBehind/CodeBehindClass.cs, Makefile.am:
	  In CodeBehind service, track class names rather than IClasses, as
	  IClasses can change. Now much more careful to trigger only the
	  rebuilding of nodes which need to be rebuilt. May still be some
	  performance issues on large projects (from linear lookups of class
	  names, and requirement for CodeBehind parent parsing to happen at
	  project load time).

2007-09-19  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport.addin.xml,